# sip-header

./: .gitattributes  .gitleaks.toml  CLAUDE.md  Cargo.toml  README.md  draft-sip-headers.txt  iana-sip-headers.txt
.github/workflows/: ci.yml
docs/: design-rationale.md
hooks/: check-sip-headers.sh  install.sh  pre-commit
src/: accept.rs  accept_encoding.rs  accept_language.rs  auth.rs  call_info.rs  contact.rs  geolocation.rs  header.rs  header_addr.rs  history_info.rs  lib.rs  macros.rs  message.rs  security.rs  uri_info.rs  via.rs  warning.rs
src/conference_info/: common.rs  endpoint.rs  error.rs  media.rs  mod.rs  normalize.rs  types.rs  user.rs
